# TIL

./: 마크다운 문법.md
Git/: 01-basic.md
LLM-agent/: .gitignore  .pre-commit-config.yaml  12_langgraph_rag.ipynb  13_SQL_conn.ipynb  agent.ipynb  pyproject.toml
LLM-agent/15_code_interpreter/: graph.py  llm.py  nodes.py  prompts.py
LLM-agent/15_code_interpreter/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
ML/: 05_descision_tree.ipynb
Python/: 01_variable_data_type.ipynb  02_operators.ipynb  03_containers.ipynb  04_control_flow.ipynb  05_data_methods.ipynb  06_function.ipynb
Python/coding_test/: PCCE 기출문제 1회 10번.ipynb  초보자를 위한 파이썬 300제_part1.ipynb
Python/practice/: lotto.ipynb  part1.ipynb  part2.ipynb  part3.ipynb
Python/telegram_chatbot/: main.py  telegram.ipynb
SQL/: 00-test.sql  01-create-DB.sql  02-create-table.sql  03-insert.sql  04-update-delete.sql  05-select.sql  06-alter.sql  07-where.sql  08-ordeby.sql  09-datatype.sql  10-str-func.sql  11-datetime-func.sql  12-number-func.sql  13-aggr-func.sql  14-groupby.sql  15-having.sql  16-subquery1-scala.sql  17-subquery2-vector.sql  18-join.sql  19-join-groupby.sql  20-subquery3-matrix.sql  21-view.sql  22-one-to-one.sql  23-one-to-many.sql  24-many-to-many.sql  25-full-outer-join.sql  26-cross-join.sql  27-self-join.sql  28-any-all.sql  29-exists.sql  SQL-basic.md  insert-data-01.sql  p01.sql  p02.sql  p03.sql  p04.sql  p05+.sql  p06.sql  p07.sql  p08.sql  (+12 more)
데이터분석/: 04_kpi_practice.ipynb  DQAF.ipynb
(+3 files in other folders)
